[package]
name = "bilattice"
version = "1.2.0"
edition = "2024"
description = "Hybrid post-quantum cryptographic primitives for native secure messaging apps"

[features]
default = []

[dependencies]
anyhow = "1.0.102"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
ed25519-dalek = { version = "2.2.0", features = [
  "rand_core",
  "serde",
  "signature",
] }
getrandom = { version = "0.4.2", features = ["std", "sys_rng"] }
hkdf = { version = "0.12.4", features = ["std"] }
oqs = { version = "0.11.0", default-features = false, features = [
  "ml_dsa",
  "ml_kem",
  "serde",
  "std",
] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha3 = { version = "0.10.8", features = ["zeroize"] }
x25519-dalek = { version = "2.0.1", features = [
  "getrandom",
  "serde",
  "static_secrets",
] }
zeroize = { version = "1.8.2", features = ["derive", "serde", "std"] }
